[Update]他のLPの構造を移植した

--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,48 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Ionic App</title>
 
-  <base href="/" />
+  <base href="/"/>
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="viewport"
+        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+
+  <meta charset="UTF-8">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+
+  <title>Parot | LINE公式アカウントのチャットボット作成サービス</title>
+  <meta name="description" content="LINE公式アカウントのチャットボット作成と、チャットボットで取得した情報から細かくセグメントしてメッセージを配信することができるサービスです。">
+
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Parot">
+  <meta property="og:site_name" content="Parot | LINE公式アカウントのチャットボット作成サービス">
+  <meta property="og:description" content="LINE公式アカウントのチャットボット作成と、チャットボットで取得した情報から細かくセグメントしてメッセージを配信することができるサービスです。">
+  <meta property="og:url" content="https://parot.jp">
+  <meta property="og:image" content="https://parot.jp/assets/images/lp/ogp.jpg">
+  <meta property="og:locale" content="ja_JP">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="shortcut icon" href="/favicon.ico">
+
+  <link rel="stylesheet" href="/assets/css/lp/common.d9f8c9d7d445da70f5388328b925da2a.css">
+  <link rel="stylesheet" href="/assets/css/lp/index.9dc56dfb3485e0f49e77af928e12bd1e.css">
 </head>
 
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 
 </html>
